Bug #1247, CSS alignment fixes, including browser hacks,
* Tested in MSIE 7, 8, 9, Firefox 5, Win/Safari 5, Opera 11, Chrome 13,
* Core and OUICE Light styles,
* Todo: Dark them.

--- a/application/assets/ouplayer/ouice-light/ouice-light.css
+++ b/application/assets/ouplayer/ouice-light/ouice-light.css
@@ -40,7 +40,7 @@ body,input{text-shadow:1px 1px 0 #fff; color:#183843; /*D. tourquoise*/}
 }
 
 .oup-controls .time-out, .oup-controls .time-total{
-  border:1px solid #888;
+  border:1px solid #999;
   padding:0 7px;
   border-radius:3px;
   background:#dcdcdc;
@@ -49,6 +49,7 @@ body,input{text-shadow:1px 1px 0 #fff; color:#183843; /*D. tourquoise*/}
   width:38px;
   height:12px;
   overflow:hidden;
+  text-align:center;
 }
 .oup-controls .seek.group{
   padding-top:0;
@@ -129,7 +130,7 @@ body,input{text-shadow:1px 1px 0 #fff; color:#183843; /*D. tourquoise*/}
 .oupc .seek-bar{background:url(timeline/timeline_grey_main.png) repeat-x center;}
 .oupc .buffer{background:url(timeline/timeline_hatch_main.png) repeat-x center;}
 .oupc .progress{background:url(timeline/timeline_bluebar_main.png) repeat-x center; width:2px;}
-.oupc .playhead{background:url(timeline/timeline_slider.png) no-repeat right; width:9px; height:14px; top:-36px;}
+.oupc .playhead{background:url(timeline/timeline_slider.png) no-repeat right; width:7px; height:14px; top:-36px;}
 
 /*.oup-controls .seek-bar, .oupc .buffer, .oupc .progress, .oupc .playhead{
   border:1px solid transparent;
@@ -192,6 +193,7 @@ body,input{text-shadow:1px 1px 0 #fff; color:#183843; /*D. tourquoise*/}
 /*Browser hacks. */
 .oup.-o .time-out{ X-top:-4px; bottom:38px;}
 .oup.-webkit .time-out, .oup.-webkit .time-total{padding-bottom:2px; height:13px;}
+.oup.-webkit .seek-bar, .oup.-ie7 .seek-bar{bottom:36px;}
 .oup.-ie7 .time-out, .oup.-ie7 .time-total, .oup.-ie8 .time-out, .oup.-ie8 .time-total{height:13px; padding-bottom:2px;}
 .oup.-ie8 .time-out{position:relative; top:-4px; left:-3px;}
 .oup.-ie7 .time-out{position:relative; top:1px; left:2px;}
